--- a/lib/views/new_gossip.erb
+++ b/lib/views/new_gossip.erb
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Crée un potin !</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <head>
-        <title>Créer un potin</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <title>Crée un potin !</title>
     </head>
     <body class="text-center">
         <h1>Crée un potin !</h1>
         <p>Balance ton potin via le formulaire ci-dessous</p>
         <form action='/gossips/new/' method='POST'>
-        Saisi ici ton nom :  <input type='text' name='gossip_author'/><br/>
-        <BR> 
-        Balance ton potin : <input type='text' name='gossip_content'/><br/>
-        <BR> 
-        <input type='submit'/>
+            Saisi ici ton nom :  <input type='text' name='gossip_author'/><br/>
+            <BR> 
+            Balance ton potin : <input type='text' name='gossip_content'/><br/>
+            <BR> 
+            <input type='submit'/>
         </form>
+        <BR>
+        <p><a href="/">Lien pour revenir à la page des potains</a> !</p>
     </body>
 </html>
